--- a/packages/cli/src/plugins/__fixtures__/foundry/foundry.toml
+++ b/packages/cli/src/plugins/__fixtures__/foundry/foundry.toml
@@ -4,4 +4,4 @@ out = 'out'
 solc = '0.8.13'
 src = 'src'
 
-# See more config options https://github.com/foundry-rs/foundry/tree/master/config
+# See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
