chore: add vue entrypoint

--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -41,6 +41,10 @@
       "types": "./dist/types/exports/actions.d.ts",
       "default": "./dist/esm/exports/actions.js"
     },
+    "./actions/experimental": {
+      "types": "./dist/types/exports/actions.experimental.d.ts",
+      "default": "./dist/esm/exports/actions.experimental.js"
+    },
     "./chains": {
       "types": "./dist/types/exports/chains.d.ts",
       "default": "./dist/esm/exports/chains.js"
