--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "preinstall": "pnpx only-allow pnpm",
     "prepare": "pnpm simple-git-hooks",
     "test": "vitest",
-    "test:build": "pnpm run --r --parallel test:build",
+    "test:build": "bun scripts/generateProxyPackages.ts && pnpm run --r --parallel test:build",
     "test:cli": "vitest --project @wagmi/cli",
     "test:core": "vitest --project @wagmi/core",
     "test:create-wagmi": "vitest --project create-wagmi",
@@ -111,7 +111,10 @@
         "entry": "src/cli.ts!"
       },
       "packages/react": {
-        "entry": "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!",
+        "entry": [
+          "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!",
+          "src/exports/actions/experimental.ts!"
+        ],
         "ignore": ["test/setup.ts"]
       },
       "packages/test": {
@@ -121,7 +124,10 @@
         ]
       },
       "packages/vue": {
-        "entry": "src/exports/{actions,chains,connectors,index,nuxt,query}.ts!",
+        "entry": [
+          "src/exports/{actions,chains,connectors,index,nuxt,query}.ts!",
+          "src/exports/actions/experimental.ts!"
+        ],
         "ignore": ["src/nuxt/runtime/*", "test/setup.ts"],
         "ignoreDependencies": ["nuxt"]
       },
