--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -42,8 +42,8 @@
       "default": "./dist/esm/exports/actions.js"
     },
     "./actions/experimental": {
-      "types": "./dist/types/exports/actions.experimental.d.ts",
-      "default": "./dist/esm/exports/actions.experimental.js"
+      "types": "./dist/types/exports/actions/experimental.d.ts",
+      "default": "./dist/esm/exports/actions/experimental.js"
     },
     "./chains": {
       "types": "./dist/types/exports/chains.d.ts",
