add uxuy wallet

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -2,3 +2,4 @@
 
 /packages/connectors/src/safe @DaniSomoza @dasanra @mikhailxyz @yagopv
 /packages/connectors/src/walletConnect @ganchoradkov @glitch-txs @ignaciosantise @tomiir
+/packages/connectors/src/uxuyWallet  @max-uxuy @uxuysafe @lifecoder1988
