chore: bump dev deps

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "docs:dev": "pnpm --filter site dev",
     "format": "biome format --write",
     "lint": "biome check --write",
-    "lint:repo": "sherif",
+    "lint:repo": "sherif -i viem",
     "lint:unused": "pnpm clean && knip",
     "postinstall": "pnpm preconstruct",
     "preconstruct": "bun scripts/preconstruct.ts",
@@ -41,8 +41,8 @@
     "version:update:viem": "bun scripts/updateViemVersion.ts"
   },
   "devDependencies": {
-    "@arethetypeswrong/cli": "^0.15.3",
-    "@biomejs/biome": "^1.8.3",
+    "@arethetypeswrong/cli": "^0.16.4",
+    "@biomejs/biome": "^1.9.2",
     "@changesets/changelog-github": "0.4.6",
     "@changesets/cli": "^2.27.1",
     "@types/bun": "^1.1.1",
@@ -53,9 +53,9 @@
     "glob": "^10.3.12",
     "happy-dom": "^12.2.1",
     "knip": "^5.13.0",
-    "prool": "^0.0.11",
-    "publint": "^0.2.7",
-    "sherif": "^0.8.4",
+    "prool": "^0.0.16",
+    "publint": "^0.2.11",
+    "sherif": "^1.0.0",
     "simple-git-hooks": "^2.11.1",
     "typescript": "5.5.2",
     "viem": "2.17.0",
