--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -96,10 +96,11 @@
   },
   "devDependencies": {
     "@tanstack/react-query": ">=5.45.1",
-    "@testing-library/react": ">=15.0.7",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": ">=16.0.1",
     "@types/react": ">=18.3.1",
     "@types/react-dom": ">=18.3.0",
-    "@types/use-sync-external-store": "^0.0.3",
+    "@types/use-sync-external-store": "^0.0.6",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1"
   },
