--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "@biomejs/biome": "^1.9.2",
     "@changesets/changelog-github": "0.4.6",
     "@changesets/cli": "^2.27.1",
-    "@types/bun": "^1.1.1",
-    "@vitest/coverage-v8": "^1.6.0",
-    "@vitest/ui": "^1.6.0",
+    "@types/bun": "^1.1.10",
+    "@vitest/coverage-v8": "^2.1.1",
+    "@vitest/ui": "^2.1.1",
     "@wagmi/test": "workspace:*",
-    "bun": "^1.1.7",
+    "bun": "^1.1.29",
     "glob": "^10.3.12",
-    "happy-dom": "^12.2.1",
+    "happy-dom": "^15.7.4",
     "knip": "^5.13.0",
     "prool": "^0.0.16",
     "publint": "^0.2.11",
@@ -59,7 +59,7 @@
     "simple-git-hooks": "^2.11.1",
     "typescript": "5.5.2",
     "viem": "2.17.0",
-    "vitest": "^1.6.0"
+    "vitest": "^2.1.1"
   },
   "packageManager": "pnpm@9.4.0",
   "pnpm": {
@@ -79,8 +79,13 @@
     "pre-commit": "pnpm lint"
   },
   "knip": {
-    "ignore": ["**/templates/**", "**/hardhat.config.js"],
-    "ignoreBinaries": ["only-allow"],
+    "ignore": [
+      "**/templates/**",
+      "**/hardhat.config.js"
+    ],
+    "ignoreBinaries": [
+      "only-allow"
+    ],
     "ignoreWorkspaces": [
       "packages/register-tests/**",
       "packages/test",
@@ -96,16 +101,24 @@
           "src/exports/{config,index,plugins}.ts!",
           "types/*.d.ts!"
         ],
-        "ignore": ["test/{constants,setup,utils}.ts"]
+        "ignore": [
+          "test/{constants,setup,utils}.ts"
+        ]
       },
       "packages/connectors": {
         "entry": "src/exports/index.ts!",
-        "ignoreDependencies": ["@walletconnect/modal"]
+        "ignoreDependencies": [
+          "@walletconnect/modal"
+        ]
       },
       "packages/core": {
         "entry": "src/exports/{actions,chains,codegen,experimental,index,internal,query}.ts!",
-        "ignore": ["test/setup.ts"],
-        "ignoreDependencies": ["@tanstack/query-core"]
+        "ignore": [
+          "test/setup.ts"
+        ],
+        "ignoreDependencies": [
+          "@tanstack/query-core"
+        ]
       },
       "packages/create-wagmi": {
         "entry": "src/cli.ts!"
@@ -115,7 +128,9 @@
           "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!",
           "src/exports/actions/experimental.ts!"
         ],
-        "ignore": ["test/setup.ts"]
+        "ignore": [
+          "test/setup.ts"
+        ]
       },
       "packages/test": {
         "entry": [
@@ -128,11 +143,19 @@
           "src/exports/{actions,chains,connectors,index,nuxt,query}.ts!",
           "src/exports/actions/experimental.ts!"
         ],
-        "ignore": ["src/nuxt/runtime/*", "test/setup.ts"],
-        "ignoreDependencies": ["nuxt"]
+        "ignore": [
+          "src/nuxt/runtime/*",
+          "test/setup.ts"
+        ],
+        "ignoreDependencies": [
+          "nuxt"
+        ]
       },
       "site": {
-        "project": ["**/*.ts", "**/*.tsx"]
+        "project": [
+          "**/*.ts",
+          "**/*.tsx"
+        ]
       }
     }
   }
