--- a/packages/create-wagmi/package.json
+++ b/packages/create-wagmi/package.json
@@ -11,10 +11,10 @@
   "scripts": {
     "build": "pnpm run clean && pnpm run build:esm+types",
     "build:esm+types": "tsc --project tsconfig.build.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
+    "check:types": "tsc --noEmit",
     "clean": "rm -rf dist tsconfig.tsbuildinfo",
     "dev": "bun src/cli.ts",
-    "test:build": "publint --strict",
-    "typecheck": "tsc --noEmit"
+    "test:build": "publint --strict"
   },
   "files": [
     "dist/**",
