--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "dev:react": "pnpm --filter vite-react dev",
     "dev:vue": "pnpm --filter vite-vue dev",
     "docs:dev": "pnpm --filter site dev",
+    "check": "biome check --write",
+    "check:repo": "sherif -i viem",
+    "check:types": "pnpm run --r --parallel typecheck && tsc --noEmit",
+    "check:unused": "pnpm clean && knip",
     "format": "biome format --write",
-    "lint": "biome check --write",
-    "lint:repo": "sherif -i viem",
-    "lint:unused": "pnpm clean && knip",
     "postinstall": "pnpm preconstruct",
     "preconstruct": "bun scripts/preconstruct.ts",
     "preinstall": "pnpx only-allow pnpm",
@@ -36,7 +37,6 @@
     "test:update": "vitest --update",
     "test:ui": "vitest --ui",
     "test:vue": "vitest --project @wagmi/vue",
-    "typecheck": "pnpm run --r --parallel typecheck && tsc --noEmit",
     "version:update": "bun scripts/updateVersion.ts",
     "version:update:viem": "bun scripts/updateViemVersion.ts"
   },
@@ -76,7 +76,7 @@
     "node": "22.x"
   },
   "simple-git-hooks": {
-    "pre-commit": "pnpm lint"
+    "pre-commit": "pnpm check"
   },
   "knip": {
     "ignore": ["**/templates/**", "**/hardhat.config.js"],
