--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -11,10 +11,10 @@
   "scripts": {
     "build": "pnpm run clean && pnpm run build:esm+types",
     "build:esm+types": "tsc --project tsconfig.build.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
+    "check:types": "tsc --noEmit",
     "clean": "rm -rf dist tsconfig.tsbuildinfo config plugins",
     "dev": "bun src/cli.ts",
-    "test:build": "publint --strict && attw --pack --ignore-rules cjs-resolves-to-esm",
-    "typecheck": "tsc --noEmit"
+    "test:build": "publint --strict && attw --pack --ignore-rules cjs-resolves-to-esm"
   },
   "files": [
     "dist/**",
@@ -89,7 +89,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.12.10",
     "fixturez": "^1.1.0",
-    "msw": "^2.2.14"
+    "msw": "^2.4.9"
   },
   "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
