--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -25,6 +25,7 @@
     "/chains",
     "/codegen",
     "/connectors",
+    "/devtools",
     "/experimental",
     "/query"
   ],
@@ -58,6 +59,10 @@
       "types": "./dist/types/exports/connectors.d.ts",
       "default": "./dist/esm/exports/connectors.js"
     },
+    "./devtools": {
+      "types": "./dist/types/exports/devtools.d.ts",
+      "default": "./dist/esm/exports/devtools.js"
+    },
     "./experimental": {
       "types": "./dist/types/exports/experimental.d.ts",
       "default": "./dist/esm/exports/experimental.js"
@@ -74,6 +79,7 @@
       "chains": ["./dist/types/exports/chains.d.ts"],
       "codegen": ["./dist/types/exports/codegen.d.ts"],
       "connectors": ["./dist/types/exports/connectors.d.ts"],
+      "devtools": ["./dist/types/exports/devtools.d.ts"],
       "experimental": ["./dist/types/exports/experimental.d.ts"],
       "query": ["./dist/types/exports/query.d.ts"]
     }
@@ -92,6 +98,7 @@
   "dependencies": {
     "@wagmi/connectors": "workspace:*",
     "@wagmi/core": "workspace:*",
+    "@wagmi/devtools": "workspace:*",
     "use-sync-external-store": "1.2.0"
   },
   "devDependencies": {
