--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -9,11 +9,9 @@
     "directory": "packages/devtools"
   },
   "scripts": {
-    "build": "pnpm run clean && pnpm run build:esm+types",
-    "build:esm+types": "tsc --project tsconfig.build.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
+    "build": "pnpm clean && tsup",
     "check:types": "tsc --noEmit",
     "clean": "rm -rf dist tsconfig.tsbuildinfo",
-    "dev": "vite",
     "test:build": "publint --strict && attw --pack --ignore-rules cjs-resolves-to-esm"
   },
   "files": [
@@ -35,10 +33,15 @@
     },
     "./package.json": "./package.json"
   },
-  "dependencies": {
-    "@wagmi/core": "workspace:*",
+  "peerDependencies": {
+    "viem": "2.x"
+  },
+  "devDependencies": {
+    "@tanstack/solid-query": ">=5.59.0",
     "@wagmi/solid": "workspace:*",
-    "solid-js": "^1.9.1"
+    "solid-js": "^1.9.1",
+    "tsup": "^8.3.0",
+    "tsup-preset-solid": "^2.2.0"
   },
   "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
