feat(devtools): css hooks

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "pnpm run --r --filter \"./packages/**\" build",
+    "build": "pnpm build:devtools && pnpm run --r --filter !@wagmi/devtools --filter \"./packages/**\" build",
     "build:devtools": "pnpm run --filter @wagmi/devtools build",
     "changeset:prepublish": "pnpm version:update && pnpm build && bun scripts/formatPackageJson.ts && bun scripts/generateProxyPackages.ts",
     "changeset:publish": "pnpm changeset:prepublish && changeset publish",
