--- a/packages/solid/tsconfig.build.json
+++ b/packages/solid/tsconfig.build.json
@@ -3,6 +3,8 @@
   "include": ["src/**/*.ts"],
   "exclude": ["src/**/*.test.ts", "src/**/*.test-d.ts"],
   "compilerOptions": {
+    "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "sourceMap": true
   }
 }
