--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -37,13 +37,18 @@
     "viem": "2.x"
   },
   "devDependencies": {
+    "@css-hooks/core": "^3.0.0",
     "@tanstack/solid-query": ">=5.59.0",
     "@wagmi/solid": "workspace:*",
+    "remeda": "^2.14.0",
     "solid-js": "^1.9.1",
     "tsup": "^8.3.0",
     "tsup-preset-solid": "^2.2.0"
   },
-  "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
+  "contributors": [
+    "awkweb.eth <t@wevm.dev>",
+    "jxom.eth <j@wevm.dev>"
+  ],
   "funding": "https://github.com/sponsors/wevm",
   "keywords": [
     "wagmi",
