refactor(devtools): packages

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "pnpm build:devtools && pnpm run --r --filter !@wagmi/devtools --filter \"./packages/**\" build",
-    "build:devtools": "pnpm run --filter @wagmi/devtools build",
+    "build": "pnpm bundle && pnpm run --r --filter \"./packages/**\" build",
+    "bundle": "pnpm run --r --filter \"./packages/**\" bundle",
     "changeset:prepublish": "pnpm version:update && pnpm build && bun scripts/formatPackageJson.ts && bun scripts/generateProxyPackages.ts",
     "changeset:publish": "pnpm changeset:prepublish && changeset publish",
     "changeset:version": "changeset version && pnpm version:update && pnpm format",
@@ -13,10 +13,10 @@
     "dev:cli": "pnpm --filter cli dev",
     "dev:core": "pnpm --filter vite-core dev",
     "dev:create-wagmi": "pnpm --filter create-wagmi dev",
-    "dev:devtools": "pnpm --filter devtools dev",
     "dev:next": "pnpm --filter next-app dev",
     "dev:nuxt": "pnpm --filter nuxt-app dev",
     "dev:react": "pnpm --filter vite-react dev",
+    "dev:solid": "pnpm --filter vite-solid dev",
     "dev:vue": "pnpm --filter vite-vue dev",
     "docs:dev": "pnpm --filter site dev",
     "check": "biome check --write",
