--- a/playgrounds/vite-solid/tsconfig.json
+++ b/playgrounds/vite-solid/tsconfig.json
@@ -22,6 +22,8 @@
     "noFallthroughCasesInSwitch": true,
 
     "paths": {
+      "@wagmi/devtools": ["../../packages/devtools/src/exports"],
+      "@wagmi/devtools/*": ["../../packages/devtools/src/exports/*"],
       "@wagmi/solid": ["../../packages/solid/src/exports"]
     }
   },
