--- a/packages/devtools-ui/tsconfig.build.json
+++ b/packages/devtools-ui/tsconfig.build.json
@@ -3,7 +3,9 @@
   "include": ["src/**/*.ts"],
   "exclude": ["src/**/*.test.ts", "src/**/*.test-d.ts"],
   "compilerOptions": {
+    "incremental": false,
     "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "sourceMap": true
   }
 }
