--- a/packages/solid/package.json
+++ b/packages/solid/package.json
@@ -12,7 +12,7 @@
     "build": "pnpm run clean && pnpm run build:esm+types",
     "build:esm+types": "tsc --project tsconfig.build.json --outDir ./dist/esm --declaration --declarationMap --declarationDir ./dist/types",
     "check:types": "tsc --noEmit",
-    "clean": "rm -rf dist tsconfig.tsbuildinfo actions chains connectors devtools query",
+    "clean": "rm -rf dist tsconfig.tsbuildinfo actions chains connectors query",
     "test:build": "publint --strict && attw --pack --ignore-rules cjs-resolves-to-esm"
   },
   "files": [
@@ -24,7 +24,6 @@
     "/actions",
     "/chains",
     "/connectors",
-    "/devtools",
     "/query"
   ],
   "sideEffects": false,
@@ -53,10 +52,6 @@
       "types": "./dist/types/exports/connectors.d.ts",
       "default": "./dist/esm/exports/connectors.js"
     },
-    "./devtools": {
-      "types": "./dist/types/exports/devtools.d.ts",
-      "default": "./dist/esm/exports/devtools.js"
-    },
     "./query": {
       "types": "./dist/types/exports/query.d.ts",
       "default": "./dist/esm/exports/query.js"
@@ -68,7 +63,6 @@
       "actions": ["./dist/types/exports/actions.d.ts"],
       "chains": ["./dist/types/exports/chains.d.ts"],
       "connectors": ["./dist/types/exports/connectors.d.ts"],
-      "devtools": ["./dist/types/exports/devtools.d.ts"],
       "query": ["./dist/types/exports/query.d.ts"]
     }
   },
@@ -85,8 +79,7 @@
   },
   "dependencies": {
     "@wagmi/connectors": "workspace:*",
-    "@wagmi/core": "workspace:*",
-    "@wagmi/devtools": "workspace:*"
+    "@wagmi/core": "workspace:*"
   },
   "devDependencies": {
     "@solidjs/testing-library": ">=0.8.10",
