--- a/playgrounds/vite-react/package.json
+++ b/playgrounds/vite-react/package.json
@@ -11,6 +11,7 @@
     "@tanstack/query-sync-storage-persister": "5.0.5",
     "@tanstack/react-query": ">=5.45.1",
     "@tanstack/react-query-persist-client": "5.0.5",
+    "@wagmi/devtools": "workspace:*",
     "idb-keyval": "^6.2.1",
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
