--- a/playgrounds/vite-solid/package.json
+++ b/playgrounds/vite-solid/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "devtools",
+  "name": "vite-solid",
   "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,6 +9,7 @@
   },
   "dependencies": {
     "@tanstack/solid-query": ">=5.59.0",
+    "@wagmi/devtools": "workspace:*",
     "@wagmi/solid": "workspace:*",
     "solid-js": "^1.8.20"
   },
