feat(devtools): playground

--- a/packages/devtools-ui/tsconfig.json
+++ b/packages/devtools-ui/tsconfig.json
@@ -4,6 +4,13 @@
     "jsx": "preserve",
     "jsxImportSource": "solid-js"
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx", "test/**/*.ts", "test/**/*.tsx"],
+  "include": [
+    "playground/**/*.ts",
+    "playground/**/*.tsx",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "test/**/*.ts",
+    "test/**/*.tsx"
+  ],
   "exclude": []
 }
