--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev:cli": "pnpm --filter cli dev",
     "dev:core": "pnpm --filter vite-core dev",
     "dev:create-wagmi": "pnpm --filter create-wagmi dev",
+    "dev:devtools": "pnpm --filter devtools-ui dev",
     "dev:next": "pnpm --filter next-app dev",
     "dev:nuxt": "pnpm --filter nuxt-app dev",
     "dev:react": "pnpm --filter vite-react dev",
@@ -120,6 +121,10 @@
           "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!",
           "src/exports/actions/experimental.ts!"
         ],
+        "ignore": ["test/setup.ts"]
+      },
+      "packages/solid": {
+        "entry": ["src/exports/{actions,chains,connectors,index,query}.ts!"],
         "ignore": ["test/setup.ts"]
       },
       "packages/test": {
