--- a/packages/devtools-ui/package.json
+++ b/packages/devtools-ui/package.json
@@ -11,6 +11,7 @@
     "bundle": "pnpm clean && tsup",
     "check:types": "tsc --noEmit",
     "clean": "rm -rf dist tsconfig.tsbuildinfo",
+    "dev": "vite",
     "test:build": "publint --strict && attw --pack --ignore-rules cjs-resolves-to-esm"
   },
   "files": [
@@ -37,11 +38,18 @@
   },
   "devDependencies": {
     "@css-hooks/core": "^3.0.0",
+    "@iconify-icon/solid": "^2.1.1",
+    "@solid-primitives/storage": "^4.2.1",
     "@tanstack/solid-query": ">=5.59.0",
     "@wagmi/solid": "workspace:*",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
     "remeda": "^2.14.0",
     "solid-js": "^1.9.1",
+    "tailwindcss": "^3.4.13",
     "tsup": "^8.3.0",
-    "tsup-preset-solid": "^2.2.0"
+    "tsup-preset-solid": "^2.2.0",
+    "vite": "^5.4.1",
+    "vite-plugin-solid": "^2.10.2"
   }
 }
