--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -51,7 +51,9 @@
     "@safe-global/safe-apps-sdk": "9.1.0",
     "@walletconnect/ethereum-provider": "2.17.0",
     "@walletconnect/modal": "2.7.0",
-    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3"
+    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3",
+    "@uxuycom/web3-tg-sdk": "^0.0.5",
+    "eventemitter3": "5.0.1"
   },
   "devDependencies": {
     "@wagmi/core": "workspace:*",
