chore: add codeowners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,5 @@
 @tmm @jxom
 
+/packages/connectors/src/metaMask @ecp4224 @omridan159 @abretonc7s @elefantel @BjornGunnarsson @EdouardBougon
 /packages/connectors/src/safe @DaniSomoza @dasanra @mikhailxyz @yagopv
 /packages/connectors/src/walletConnect @ganchoradkov @glitch-txs @ignaciosantise @tomiir
