--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: Clone repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GH_PTOKEN }}
 
       - name: Install dependencies
         uses: wevm/actions/.github/actions/pnpm@main
