--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dev:nuxt": "pnpm --filter nuxt-app dev",
     "dev:react": "pnpm --filter vite-react dev",
     "dev:vue": "pnpm --filter vite-vue dev",
+    "dev:svelte": "pnpm --filter svelte dev",
     "docs:dev": "pnpm --filter site dev",
     "check": "biome check --write",
     "check:repo": "sherif -i viem",
@@ -37,6 +38,7 @@
     "test:update": "vitest --update",
     "test:ui": "vitest --ui",
     "test:vue": "vitest --project @wagmi/vue",
+    "test:svelte": "vitest --project @wagmi/svelte",
     "version:update": "bun scripts/updateVersion.ts",
     "version:update:viem": "bun scripts/updateViemVersion.ts"
   },
