--- a/packages/svelte/package.json
+++ b/packages/svelte/package.json
@@ -5,7 +5,7 @@
     "dev": "vite dev",
     "build": "vite build && npm run package",
     "preview": "vite preview",
-    "package": "svelte-kit sync && svelte-package && publint",
+    "package": "svelte-kit sync && svelte-package -o dist/lib && publint",
     "prepublishOnly": "npm run package",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
@@ -14,13 +14,13 @@
   },
   "files": ["dist", "!dist/**/*.test.*", "!dist/**/*.spec.*"],
   "sideEffects": ["**/*.css"],
-  "svelte": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "svelte": "./dist/lib/index.js",
+  "types": "./dist/lib/index.d.ts",
   "type": "module",
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "svelte": "./dist/index.js"
+      "types": "./dist/lib/index.d.ts",
+      "svelte": "./dist/lib/index.js"
     }
   },
   "peerDependencies": {
@@ -44,5 +44,8 @@
     "typescript": "^5.0.0",
     "typescript-eslint": "^8.0.0",
     "vite": "^5.0.11"
+  },
+  "dependencies": {
+    "@wagmi/core": "workspace:^"
   }
 }
