ci: ignore .svelte files
Biome currently only has partial support for Svelte files. It can successfully format the <script> portion, but when linting it doesn't check the HTML part, leading to many variables being marked as unused.

--- a/biome.json
+++ b/biome.json
@@ -11,7 +11,10 @@
     "lineWidth": 80
   },
   "linter": {
-    "ignore": ["packages/create-wagmi/templates/*"],
+    "ignore": [
+      "packages/create-wagmi/templates/*",
+      "packages/svelte/**/*.svelte"
+    ],
     "enabled": true,
     "rules": {
       "recommended": true,
