test: refactor svelte tests into packages/svelte folder
I'm not sure how to get Svelte tests into the Vitest workspace. Without installing a bunch of dependencies into the root folder, it cannot run the Svelte-specific code.

--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "test:update": "vitest --update",
     "test:ui": "vitest --ui",
     "test:vue": "vitest --project @wagmi/vue",
-    "test:svelte": "vitest --project @wagmi/svelte",
+    "test:svelte": "pnpm --filter svelte test",
     "version:update": "bun scripts/updateVersion.ts",
     "version:update:viem": "bun scripts/updateViemVersion.ts"
   },
