--- a/site/package.json
+++ b/site/package.json
@@ -8,7 +8,7 @@
     "preview": "vitepress preview"
   },
   "devDependencies": {
-    "@shikijs/vitepress-twoslash": "^1.4.0",
+    "@shikijs/vitepress-twoslash": "1.22.2",
     "@tanstack/query-core": ">=5.45.0",
     "@tanstack/react-query": ">=5.45.1",
     "@tanstack/vue-query": ">=5.45.0",
@@ -21,7 +21,7 @@
     "react": ">=18.3.1",
     "unocss": "^0.59.4",
     "viem": "2.*",
-    "vitepress": "^1.1.4",
+    "vitepress": "1.5.0",
     "vue": ">=3.4.21",
     "wagmi": "workspace:*"
   }
