--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,19 +8,7 @@
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
-  "[json]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-  "[javascript]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-  "[javascriptreact]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-  "[typescript]": {
-    "editor.defaultFormatter": "biomejs.biome"
-  },
-  "[typescriptreact]": {
+  "[javascript][javascriptreact][json][typescript][typescriptreact]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
   "[vue]": {
