--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -93,11 +93,10 @@
   },
   "devDependencies": {
     "@nuxt/schema": "^3.11.2",
-    "@tanstack/vue-query": "catalog:vue",
+    "@tanstack/vue-query": "catalog:",
     "@vue/test-utils": "^2.4.6",
     "nuxt": "^3.11.2",
-    "vue": "catalog:vue",
-    "vue-tsc": "^2.0.6"
+    "vue": "catalog:"
   },
   "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
