--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -6,16 +6,14 @@ packages:
   - playgrounds/*
   - site
 
-catalogs:
-  core:
-    "@tanstack/query-core": ">=5.45.0"
-  react:
-    "@tanstack/react-query": ">=5.45.1"
-    "@testing-library/react": ">=16.0.1"
-    "@types/react": ">=18.3.1"
-    "@types/react-dom": ">=18.3.0"
-    react: ">=18.3.1"
-    react-dom: ">=18.3.1"
-  vue:
-    "@tanstack/vue-query": ">=5.45.0"
-    vue: ">=3.4.21"
+catalog:
+  "@tanstack/query-core": "5.49.1"
+  "@tanstack/react-query": "5.49.2"
+  "@tanstack/vue-query": "5.49.1"
+  "@testing-library/dom": "10.4.0"
+  "@testing-library/react": "16.0.1"
+  "@types/react": "18.3.1"
+  "@types/react-dom": "18.3.0"
+  react-dom: "18.3.1"
+  react: "18.3.1"
+  vue: "3.4.27"
