--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "dev:nuxt": "pnpm --filter nuxt-app dev",
     "dev:react": "pnpm --filter vite-react dev",
     "dev:vue": "pnpm --filter vite-vue dev",
-    "dev:svelte": "pnpm --filter svelte dev",
+    "dev:svelte": "pnpm --filter sveltekit dev",
     "docs:dev": "pnpm --filter site dev",
     "check": "biome check --write",
     "check:repo": "sherif -i viem",
