--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -37,7 +37,6 @@
   "peerDependencies": {
     "@wagmi/core": "workspace:*",
     "typescript": ">=5.0.4",
-    "thirdweb": "^5.68.0",
     "viem": "2.x"
   },
   "peerDependenciesMeta": {
@@ -54,12 +53,12 @@
     "@safe-global/safe-apps-provider": "0.18.4",
     "@safe-global/safe-apps-sdk": "9.1.0",
     "@walletconnect/ethereum-provider": "2.17.0",
-    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3"
+    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3",
+    "thirdweb": "5.68.0"
   },
   "devDependencies": {
     "@wagmi/core": "workspace:*",
-    "msw": "^2.4.9",
-    "thirdweb": "5.68.0"
+    "msw": "^2.4.9"
   },
   "contributors": ["awkweb.eth <t@wevm.dev>", "jxom.eth <j@wevm.dev>"],
   "funding": "https://github.com/sponsors/wevm",
