--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -73,7 +73,7 @@
     "dotenv-expand": "^10.0.0",
     "esbuild": "^0.19.0",
     "escalade": "3.2.0",
-    "execa": "^8.0.1",
+    "nanoexec": "^1.1.0",
     "fdir": "^6.1.1",
     "nanospinner": "1.2.2",
     "pathe": "^1.1.2",
