--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -80,6 +80,7 @@
     "picocolors": "^1.0.0",
     "picomatch": "^3.0.0",
     "prettier": "^3.0.3",
+    "tinyexec": "^0.3.1",
     "viem": "2.x",
     "zod": "^3.22.2"
   },
