--- a/site/package.json
+++ b/site/package.json
@@ -20,7 +20,7 @@
     "nuxt": "^3.11.2",
     "react": "catalog:",
     "unocss": "^0.59.4",
-    "viem": "2.*",
+    "viem": "2.22.13",
     "vitepress": "1.5.0",
     "vue": "catalog:",
     "wagmi": "workspace:*"
