--- a/playgrounds/next/package.json
+++ b/playgrounds/next/package.json
@@ -15,7 +15,8 @@
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
     "viem": "2.*",
-    "wagmi": "workspace:*"
+    "wagmi": "workspace:*",
+    "@wagmi/connectors": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20.12.10",
