--- a/playgrounds/vite-react/package.json
+++ b/playgrounds/vite-react/package.json
@@ -15,7 +15,8 @@
     "react": ">=18.3.1",
     "react-dom": ">=18.3.1",
     "viem": "2.*",
-    "wagmi": "workspace:*"
+    "wagmi": "workspace:*",
+    "@wagmi/connectors": "workspace:*"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "5.0.5",
