--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -46,11 +46,16 @@
   },
   "dependencies": {
     "@coinbase/wallet-sdk": "4.3.3",
+    "@ledgerhq/context-module": "^1.4.0",
+    "@ledgerhq/device-management-kit": "^0.7.0",
+    "@ledgerhq/device-signer-kit-ethereum": "^1.5.0",
+    "@ledgerhq/device-transport-kit-web-hid": "^1.1.0",
     "@metamask/sdk": "0.32.0",
     "@safe-global/safe-apps-provider": "0.18.6",
     "@safe-global/safe-apps-sdk": "9.1.0",
     "@walletconnect/ethereum-provider": "2.21.1",
-    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3"
+    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "@wagmi/core": "workspace:*",
