--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "sherif": "^1.0.0",
     "simple-git-hooks": "^2.11.1",
     "typescript": "5.8.3",
-    "viem": "2.29.2",
+    "viem": "2.31.7",
     "vitest": "^2.1.1"
   },
   "packageManager": "pnpm@9.11.0",
@@ -77,8 +77,13 @@
     "pre-commit": "pnpm check"
   },
   "knip": {
-    "ignore": ["**/templates/**", "**/hardhat.config.js"],
-    "ignoreBinaries": ["only-allow"],
+    "ignore": [
+      "**/templates/**",
+      "**/hardhat.config.js"
+    ],
+    "ignoreBinaries": [
+      "only-allow"
+    ],
     "ignoreWorkspaces": [
       "packages/register-tests/**",
       "packages/test",
@@ -94,15 +99,21 @@
           "src/exports/{config,index,plugins}.ts!",
           "types/*.d.ts!"
         ],
-        "ignore": ["test/{constants,setup,utils}.ts"]
+        "ignore": [
+          "test/{constants,setup,utils}.ts"
+        ]
       },
       "packages/connectors": {
         "entry": "src/exports/index.ts!"
       },
       "packages/core": {
         "entry": "src/exports/{actions,chains,codegen,experimental,index,internal,query}.ts!",
-        "ignore": ["test/setup.ts"],
-        "ignoreDependencies": ["@tanstack/query-core"]
+        "ignore": [
+          "test/setup.ts"
+        ],
+        "ignoreDependencies": [
+          "@tanstack/query-core"
+        ]
       },
       "packages/create-wagmi": {
         "entry": "src/cli.ts!"
@@ -112,7 +123,9 @@
           "src/exports/{actions,chains,codegen,connectors,experimental,index,query}.ts!",
           "src/exports/actions/experimental.ts!"
         ],
-        "ignore": ["test/setup.ts"]
+        "ignore": [
+          "test/setup.ts"
+        ]
       },
       "packages/test": {
         "entry": [
@@ -125,11 +138,19 @@
           "src/exports/{actions,chains,connectors,index,nuxt,query}.ts!",
           "src/exports/actions/experimental.ts!"
         ],
-        "ignore": ["src/nuxt/runtime/*", "test/setup.ts"],
-        "ignoreDependencies": ["nuxt"]
+        "ignore": [
+          "src/nuxt/runtime/*",
+          "test/setup.ts"
+        ],
+        "ignoreDependencies": [
+          "nuxt"
+        ]
       },
       "site": {
-        "project": ["**/*.ts", "**/*.tsx"]
+        "project": [
+          "**/*.ts",
+          "**/*.tsx"
+        ]
       }
     }
   }
