chore: up pnpm catalog

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@changesets/changelog-github": "0.4.6",
     "@changesets/cli": "^2.27.8",
     "@types/bun": "^1.1.10",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "catalog:",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@wagmi/test": "workspace:*",
