--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -7,6 +7,7 @@ packages:
   - site
 
 catalog:
+  "@vitejs/plugin-react": "^4.3.3"
   "@tanstack/query-core": "5.49.1"
   "@tanstack/react-query": "5.49.2"
   "@tanstack/vue-query": "5.49.1"
