--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@vitest/coverage-v8": "^3.2.4",
     "@wagmi/test": "workspace:*",
     "bun": "^1.1.29",
+    "change-case": "^5.4.4",
     "happy-dom": "^18.0.1",
     "knip": "^5.30.6",
     "playwright": "1.54.1",
