--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "build": "pnpm run --r --filter \"./packages/**\" build",
-    "changeset:prepublish": "pnpm version:update && pnpm build && bun scripts/formatPackageJson.ts && bun scripts/generateProxyPackages.ts",
+    "changeset:prepublish": "pnpm version:update && pnpm build && node scripts/formatPackageJson.ts && node scripts/generateProxyPackages.ts",
     "changeset:publish": "pnpm changeset:prepublish && changeset publish",
     "changeset:version": "changeset version && pnpm version:update && pnpm format",
     "check": "biome check --write",
@@ -23,11 +23,11 @@
     "docs:dev": "pnpm --filter site dev",
     "format": "biome format --write",
     "postinstall": "pnpm preconstruct",
-    "preconstruct": "bun scripts/preconstruct.ts",
+    "preconstruct": "node scripts/preconstruct.ts",
     "preinstall": "pnpx only-allow pnpm",
     "prepare": "pnpm simple-git-hooks",
     "test": "vitest",
-    "test:build": "bun scripts/generateProxyPackages.ts && pnpm run --r --parallel test:build",
+    "test:build": "node scripts/generateProxyPackages.ts && pnpm run --r --parallel test:build",
     "test:cli": "vitest --project @wagmi/cli",
     "test:connectors": "vitest --project @wagmi/connectors",
     "test:core": "vitest --project @wagmi/core",
@@ -37,20 +37,19 @@
     "test:typecheck": "vitest typecheck",
     "test:update": "vitest --update",
     "test:vue": "vitest --project @wagmi/vue",
-    "version:update": "bun scripts/updateVersion.ts",
-    "version:update:viem": "bun scripts/updateViemVersion.ts"
+    "version:update": "node scripts/updateVersion.ts",
+    "version:update:viem": "node scripts/updateViemVersion.ts"
   },
   "devDependencies": {
     "@arethetypeswrong/cli": "^0.16.4",
     "@biomejs/biome": "^2.0.6",
-    "@changesets/changelog-github": "0.4.6",
-    "@changesets/cli": "^2.27.8",
-    "@types/bun": "^1.1.10",
+    "@changesets/cli": "^3.0.0-next.0",
+    "@svitejs/changesets-changelog-github-compact": "^1.2.0",
     "@vitejs/plugin-react": "catalog:",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@wagmi/test": "workspace:*",
-    "bun": "^1.1.29",
+    "glob": "^11.0.3",
     "happy-dom": "^18.0.1",
     "knip": "^5.30.6",
     "playwright": "1.54.1",
@@ -66,6 +65,13 @@
     "vitest-browser-react": "^2.0.0-beta.1"
   },
   "packageManager": "pnpm@10.16.1",
+  "devEngines": {
+    "runtime": {
+      "name": "node",
+      "version": "^24.5.1",
+      "onFail": "download"
+    }
+  },
   "pnpm": {
     "peerDependencyRules": {
       "ignoreMissing": [
@@ -78,9 +84,6 @@
     "patchedDependencies": {
       "prool": "patches/prool.patch"
     }
-  },
-  "engines": {
-    "node": "22.x"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm check"
