--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,6 @@
   "include": ["scripts/**/*.ts", "vitest.config.ts"],
   "exclude": [],
   "compilerOptions": {
-    "types": ["@types/bun", "@vitest/browser/providers/playwright"]
+    "types": ["@vitest/browser/providers/playwright"]
   }
 }
