--- a/packages/connectors/package.json
+++ b/packages/connectors/package.json
@@ -52,7 +52,8 @@
     "@safe-global/safe-apps-provider": "0.18.6",
     "@safe-global/safe-apps-sdk": "9.1.0",
     "@walletconnect/ethereum-provider": "2.21.1",
-    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3"
+    "cbw-sdk": "npm:@coinbase/wallet-sdk@3.9.3",
+    "porto": "0.2.15"
   },
   "devDependencies": {
     "@wagmi/core": "workspace:*",
